# rp2040_epaper

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
app/: main.c
